--- a/contact.html
+++ b/contact.html
@@ -39,13 +39,7 @@
         <h1>CONTACT US</h1>
         <br/>
     </header>
-    <main>
-        <h3>Questions or feedback?
-            <br/>
-            Reach out using the information below or fill out our contact form!
-        </h3>
-        <br/>
-        <form>
+    <main><form>
             <fieldset>
                 <legend><b>Questions or Feedback</b></legend>
                 <label for="fname">First Name: </label>
@@ -66,6 +60,10 @@
             </fieldset>
         </form>
         <br/>
+        <h3>Questions or feedback?
+            <br/>
+            Reach out using the information below or fill out our contact form!
+        </h3>
         <p>British Columbia: +1 604-933-8439</p>
         <p>Manitoba: +1 584-367-9829</p>
         <p>Email: contact@mbpride.com | questions@bcpride.com</p>
