--- a/history.html
+++ b/history.html
@@ -38,6 +38,10 @@
             width: 20%;
             margin: 10px;
         }
+        section article p {
+            float: left;
+            width: 75%;
+        }
     </style>
 </head>
 <body>
