--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
         </h3>
         <p>British Columbia: +1 604-933-8439</p>
         <p>Manitoba: +1 584-367-9829</p>
-        <p>Email: contact@mbpride.com | questions@bcpride.com</p>
+        <p>Email: contact@mbpride.com <b>OR</b> questions@bcpride.com</p>
     </main>
     <footer>
         <p>&copy; LGBTQ+ human rights movement</p>
