--- a/history.html
+++ b/history.html
@@ -56,6 +56,7 @@
         <h1>HISTORY</h1>
         <br/>
     </header>
+    <!--Main content-->
     <main>
         <!--Section about historical figures in lgbtq+ history-->
         <section id="section1">
