--- a/contact.html
+++ b/contact.html
@@ -83,11 +83,18 @@
             <p>British Columbia: +1 604-933-8439</p>
             <p>Manitoba: +1 584-367-9829</p>
             <p>Email: contact@mbpride.com <b>OR</b> questions@bcpride.com</p>
+            <br/>
+            <br/>
         </section>
     </main>
-    <!--Links and copyright-->
+    <br/>
+    <!--Socials, and copyright-->
     <footer>
-        <p>&copy; LGBTQ+ human rights movement</p>
+        <section>
+                <a href="https://www.facebook.com/"><img src="images/facebook.png"></a>
+                <a href="https://www.instagram.com/lgbtq_rights_are_human_rights/"><img src="images/Instagram.png"></a>
+            <p>&copy; LGBTQ+ human rights</p>
+        </section>
     </footer>
 </body>
 </html>
