--- a/flags.html
+++ b/flags.html
@@ -97,14 +97,14 @@
     <!--Footer containing links and copyright-->
     <footer>
         <h4>Citations</h4>
-        <!--Removes bullets from list items-->
-        <ul type="none">
-            <!--Links to sources-->
-            <li><a href="https://thedaily.case.edu/waving-proudly-learn-the-meanings-behind-lgbt-flags/">Link to source for meaning behind flag colors</a></li>
-            <li><a href="https://www.volvogroup.com/en/news-and-media/news/2021/jun/lgbtq-pride-flags-and-what-they-stand-for.html">Link to source for meaning behind flag colors</a> </li>
-            <li><a href="https://flags.fandom.com/wiki/Straight_flag">Link to source for meaning behind straight flag</a></li>
-        </ul>
+            <!--Links to sources and socials-->
+            <a href="https://thedaily.case.edu/waving-proudly-learn-the-meanings-behind-lgbt-flags/">Link to source for meaning behind flag colors</a>
+            <a href="https://www.volvogroup.com/en/news-and-media/news/2021/jun/lgbtq-pride-flags-and-what-they-stand-for.html">Link to source for meaning behind flag colors</a>
+            <a href="https://flags.fandom.com/wiki/Straight_flag">Link to source for meaning behind straight flag</a>
+            <a href="https://www.facebook.com/"><img src="images/facebook.png"></a>
+            <a href="https://www.instagram.com/lgbtq_rights_are_human_rights/"><img src="images/Instagram.png"></a>
         <!--Copyright-->
+        <p>&copy; LGBTQ+ Human Rights</p>
     </footer>
 </body>
 </html>
