--- a/history.html
+++ b/history.html
@@ -109,12 +109,14 @@
     <footer>
         <h4>Citations</h4>
         <!--Removes bullet points from list items-->
-        <ul type="none">
             <!--Links to source-->
-            <li><a href="https://www.unco.edu/gender-sexuality-resource-center/resources/historical-figures.aspx">Link to source for historical figures</a></li>
-            <li><a href="https://gladstone.org/news/lgbtq-history-timeline">Link to source for historic events</a></li>
-        </ul>
+            <a href="https://www.unco.edu/gender-sexuality-resource-center/resources/historical-figures.aspx">Link to source for historical figures</a>
+            <a href="https://gladstone.org/news/lgbtq-history-timeline">Link to source for historic events</a>
+            <!--Socials-->
+            <a href="https://www.facebook.com/"><img src="images/facebook.png"></a>
+            <a href="https://www.instagram.com/lgbtq_rights_are_human_rights/"><img src="images/Instagram.png"></a>
         <!--Copyright-->
+        <p>&copy; LGBTQ+ Human Rights</p>
     </footer>
 </body>
 </html>
