--- a/index.html
+++ b/index.html
@@ -186,13 +186,13 @@
     <!--Footer containing links and copyright-->
     <footer>
         <h4>Citations</h4>
-        <!--Removes bullets from side of list-->
-        <ul type="none">
-            <!--Links to sources-->
-            <li><a href="https://usw.ca/resources/2slgbtqia-glossary-list-of-definitions/">Link to 2slgbtqia glossary list of definitions</a></li>
-            <li><a href="https://www.verywellmind.com/what-the-colors-of-the-new-pride-flag-mean-5189173">Link to Colors of the Pride flag meanings</a></li>
-        </ul>
+            <!--Links to sources and socials-->
+            <a href="https://usw.ca/resources/2slgbtqia-glossary-list-of-definitions/">Link to 2slgbtqia glossary list of definitions</a>
+            <a href="https://www.verywellmind.com/what-the-colors-of-the-new-pride-flag-mean-5189173">Link to Colors of the Pride flag meanings</a>
+            <a href="https://www.facebook.com/"><img src="images/facebook.png"></a>
+            <a href="https://www.instagram.com/lgbtq_rights_are_human_rights/"><img src="images/Instagram.png"></a>
         <!--Copyright-->
+        <p>&copy; LGBTQ+ Human Rights</p>
     </footer>
 </body>
 </html>
