--- a/support.html
+++ b/support.html
@@ -59,7 +59,9 @@
         </section>
         <!--Section showing a list of dates for special Lgbtq+ events/holidays-->
         <section>
-            <p>Here is a list of dates special events like Pride Month, Lesbian Visibilty Day/Week, etc.</p>
+            <p id="p1">Here is a list of dates special events like Pride Month, Lesbian Visibilty Day/Week, etc.</p>
+            <button type="button" onclick="document.getElementById('p1').style.display='none'">Click</button>
+            <button type="button" onclick="document.getElementById('p1').style.display='block'">Click2</button>
                 <table>
                 <tr>
                     <th>January</th>
