--- a/contact.html
+++ b/contact.html
@@ -91,8 +91,10 @@
     <!--Socials, and copyright-->
     <footer>
         <section>
-                <a href="https://www.facebook.com/"><img src="images/facebook.png"></a>
-                <a href="https://www.instagram.com/lgbtq_rights_are_human_rights/"><img src="images/Instagram.png"></a>
+            <!--Socials-->
+            <a href="https://www.facebook.com/"><img src="images/facebook.png"></a>
+            <a href="https://www.instagram.com/lgbtq_rights_are_human_rights/"><img src="images/Instagram.png"></a>
+            <!--Copyright-->
             <p>&copy; LGBTQ+ human rights</p>
         </section>
     </footer>
