--- a/flags.html
+++ b/flags.html
@@ -96,15 +96,21 @@
     </main>
     <!--Footer containing links and copyright-->
     <footer>
-        <h4>Citations</h4>
+        <section>
+            <h4>Citations</h4>
             <!--Links to sources and socials-->
             <a href="https://thedaily.case.edu/waving-proudly-learn-the-meanings-behind-lgbt-flags/">Link to source for meaning behind flag colors</a>
+            <br/>
             <a href="https://www.volvogroup.com/en/news-and-media/news/2021/jun/lgbtq-pride-flags-and-what-they-stand-for.html">Link to source for meaning behind flag colors</a>
+            <br/>
             <a href="https://flags.fandom.com/wiki/Straight_flag">Link to source for meaning behind straight flag</a>
-            <a href="https://www.facebook.com/"><img src="images/facebook.png"></a>
+            <br/>
+            <!--Socials-->
+            <a href="https://www.facebook.com/"><img src="images/facebook.png"><img src="images/facebook.png"></a>
             <a href="https://www.instagram.com/lgbtq_rights_are_human_rights/"><img src="images/Instagram.png"></a>
-        <!--Copyright-->
-        <p>&copy; LGBTQ+ Human Rights</p>
+            <!--Copyright-->
+            <p>&copy; LGBTQ+ Human Rights</p>
+        </section>
     </footer>
 </body>
 </html>
