--- a/history.html
+++ b/history.html
@@ -107,16 +107,20 @@
     </main>
     <!--Links and copyright-->
     <footer>
-        <h4>Citations</h4>
-        <!--Removes bullet points from list items-->
+        <section>
+            <h4>Citations</h4>
+            <!--Removes bullet points from list items-->
             <!--Links to source-->
             <a href="https://www.unco.edu/gender-sexuality-resource-center/resources/historical-figures.aspx">Link to source for historical figures</a>
+            <br/>
             <a href="https://gladstone.org/news/lgbtq-history-timeline">Link to source for historic events</a>
+            <br/>
             <!--Socials-->
             <a href="https://www.facebook.com/"><img src="images/facebook.png"></a>
             <a href="https://www.instagram.com/lgbtq_rights_are_human_rights/"><img src="images/Instagram.png"></a>
-        <!--Copyright-->
-        <p>&copy; LGBTQ+ Human Rights</p>
+            <!--Copyright-->
+            <p>&copy; LGBTQ+ Human Rights</p>
+        </section>
     </footer>
 </body>
 </html>
