--- a/flags.html
+++ b/flags.html
@@ -40,13 +40,24 @@
     <main>
         <!--Section containing information about different pride flags-->
         <section>
-            <!--Image of flag, followed by name of flag, follwed by meaning of flag/flag colors, follwed by breaks to create space for images-->
-            <img src="images/sflag.png" alt="black and white striped flag">
-            <h3>Heterosexual Flag</h3>
-            <p>A flag composed of alternating black and white stripes, with a similar design to the rainbow LGBTQ+ pride flag, was created to represent straight pride.</p>
-            <br/>
-            <br/>
-            <br/>
+            <!--Table containing image of flag, followed by name of flag, follwed by meaning of flag/flag colors, 
+            followed by breaks to create space for images-->
+            <table>
+                <tr>
+                    <th>Flag Meaning</th>
+                    <th>Flag</th>
+                </tr>
+                <tr>
+                    <td>A flag composed of alternating black and white stripes, with a similar design to the rainbow LGBTQ+
+                         pride flag, was created to represent straight pride.</td>
+                    <td>Heterosexual Flag <img src="images/sflag.png" alt="black and white striped flag"></td>
+                </tr>
+                <img src="images/sflag.png" alt="black and white striped flag">
+                <h3>Heterosexual Flag</h3>
+                <p>A flag composed of alternating black and white stripes, with a similar design to the rainbow LGBTQ+ pride flag, was created to represent straight pride.</p>
+                <br/>
+                <br/>
+                <br/>
             <img src="images/sally.png" alt="black and white striped flag with rainbow a intersecting in the middle">
             <h3>Straight Ally</h3>
             <p>The Straight Ally flag is using the black white "colors" of the heterosexual flag as a field, it adds a large rainbow colored "A" (for "Ally") to indicate straight support for the Gay Pride/Equal Marriage movement.</p>
