--- a/flags.html
+++ b/flags.html
@@ -52,6 +52,7 @@
                          pride flag, was created to represent straight pride.</td>
                     <td>Heterosexual Flag <img src="images/sflag.png" alt="black and white striped flag"></td>
                 </tr>
+            </table>
                 <img src="images/sflag.png" alt="black and white striped flag">
                 <h3>Heterosexual Flag</h3>
                 <p>A flag composed of alternating black and white stripes, with a similar design to the rainbow LGBTQ+ pride flag, was created to represent straight pride.</p>
