--- a/index.html
+++ b/index.html
@@ -64,9 +64,12 @@
         </figure>
         <!--Section about what each letter of 2SLGBTQIA+ represents-->
         <section>
-            <h2>What each letter represents</h2>
-            <!--Table showing letters and what they represent. (No table headings)-->
+            <!--Table showing letters and what they represent.-->
             <table>
+                <tr>
+                    <th>Symbol</th>
+                    <th>Meaning</th>
+                </tr>
                 <tr>
                     <td><b>2S</b></td>
                     <td>Two-Spirit - Indigenous North American identity</td>
