--- a/flags.html
+++ b/flags.html
@@ -50,7 +50,9 @@
                 <tr>
                     <td>A flag composed of alternating black and white stripes, with a similar design to the rainbow LGBTQ+
                          pride flag, was created to represent straight pride.</td>
-                    <td>Heterosexual Flag <img src="images/sflag.png" alt="black and white striped flag"></td>
+                    <td>Heterosexual Flag
+                        <br/>
+                        <img src="images/sflag.png" alt="black and white striped flag"></td>
                 </tr>
             </table>
             <img src="images/sally.png" alt="black and white striped flag with rainbow a intersecting in the middle">
