--- a/flags.html
+++ b/flags.html
@@ -49,18 +49,25 @@
                 </tr>
                 <tr>
                     <td>A flag composed of alternating black and white stripes, with a similar design to the rainbow LGBTQ+
-                         pride flag, was created to represent straight pride.</td>
+                         pride flag, was created to represent straight pride.
+                    </td>
                     <td>Heterosexual Flag
                         <br/>
-                        <img src="images/sflag.png" alt="black and white striped flag"></td>
+                        <img src="images/sflag.png" alt="black and white striped flag">
+                    </td>
+                </tr>
+                <tr>
+                    <td>The Straight Ally flag is using the black white "colors" of the heterosexual flag as a field, 
+                        it adds a large rainbow colored "A" (for "Ally") to indicate straight support for the 
+                        Gay Pride/Equal Marriage movement.
+                    </td>
+                    <td>
+                        Straight Ally
+                        <br/>
+                        <img src="images/sally.png" alt="black and white striped flag with rainbow a intersecting in the middle">
+                    </td>
                 </tr>
             </table>
-            <img src="images/sally.png" alt="black and white striped flag with rainbow a intersecting in the middle">
-            <h3>Straight Ally</h3>
-            <p>The Straight Ally flag is using the black white "colors" of the heterosexual flag as a field, it adds a large rainbow colored "A" (for "Ally") to indicate straight support for the Gay Pride/Equal Marriage movement.</p>
-            <br/>
-            <br/>
-            <br/>
             <img src="images/gflag.png" alt="striped flag going from blue, getting lighter, going to white, then darkening to green">
             <h3>Gay Flag</h3>
             <p>Meant to be inclusive of a much wide range of gay men, including but not limited to transgender, intersex, and gender nonconforming men.</p>
