--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         section {
             width: 50%;
         }
+        table th {
+            padding: 0;
+        }
     </style>
 </head>
 <body>
