--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             width: 60%;
         }
         table th {
-            padding: 0;
+            padding: 2%;
         }
     </style>
 </head>
