--- a/flags.html
+++ b/flags.html
@@ -67,6 +67,15 @@
                         <img src="images/sally.png" alt="black and white striped flag with rainbow a intersecting in the middle">
                     </td>
                 </tr>
+                <tr>
+                    <td>Meant to be inclusive of a much wide range of gay men, including but not limited to transgender, 
+                        intersex, and gender nonconforming men.
+                    </td>
+                    <td>Gay Flag
+                        <br/>
+                        <img src="images/gflag.png" alt="striped flag going from blue, getting lighter, going to white, then darkening to green">
+                    </td>
+                </tr>
             </table>
             <img src="images/gflag.png" alt="striped flag going from blue, getting lighter, going to white, then darkening to green">
             <h3>Gay Flag</h3>
