--- a/history.html
+++ b/history.html
@@ -60,14 +60,16 @@
         <section id="section1">
             <h2>Historical Figures</h2>
             <article>
-                <!--Image of Chi Chia-Wei-->
-                <figure>
-                    <img src="images/chiciawei.png" alt="Image of Chi Chia-Wei facing backwards on a balcony wearing a rainbow pride flag">
-                </figure>
-                <!--Short biography of Chi Chia-Wei-->
-                <h3>Chi Chia-Wei - 1958 - Present</h3>
-                <p>Chi Chia-Wei was the first person to come out publicly as gay on national television in 1986, while organizing a press conference to announce his sexuality and his launch of a campaign to prevent the spread of HIV/AIDS.  Chi helped make Taiwan the first nation in Asia to legalize same-sex marriage. In 1986, Chi applied for a marriage license and was denied. He reapplied 3 more times but in 2013, when he applied and was denied again, Chi appealed the decision to the Taipei city government’s Department of Civil Affairs. In October 2016, Queermosa presented Chi with its first Queer Pioneer Award. On May 24, 2017, Taiwan’s Constitutional Court ruled that same-sex couples could marry, beginning in May 2019.</p>
-                <hr>
+                <table>
+                    <tr>
+                        <th>Biography</th>
+                        <th>Person(s)</th>
+                    </tr>
+                    <tr>
+                        <td>Chi Chia-Wei was the first person to come out publicly as gay on national television in 1986, while organizing a press conference to announce his sexuality and his launch of a campaign to prevent the spread of HIV/AIDS.  Chi helped make Taiwan the first nation in Asia to legalize same-sex marriage. In 1986, Chi applied for a marriage license and was denied. He reapplied 3 more times but in 2013, when he applied and was denied again, Chi appealed the decision to the Taipei city government’s Department of Civil Affairs. In October 2016, Queermosa presented Chi with its first Queer Pioneer Award. On May 24, 2017, Taiwan’s Constitutional Court ruled that same-sex couples could marry, beginning in May 2019.</td>
+                        <td><img src="images/chiciawei.png" alt="Image of Chi Chia-Wei facing backwards on a balcony wearing a rainbow pride flag"></td>
+                    </tr>
+                </table>
             </article>
             <br/>
             <article>
