--- a/contact.html
+++ b/contact.html
@@ -69,8 +69,7 @@
                     <label for="questionsorfeedback">Questions or Feedback</label>
                     <br/>
                     <textarea id="questionsorfeedback" name="QuestionsorFeedback" rows="8" cols="50"></textarea>
-                </fieldset>
-            </form>
+                    <input type="submit" value="Submit">
         </section>
         <br/>
         <section>
