--- a/flags.html
+++ b/flags.html
@@ -126,7 +126,7 @@
             <a href="https://flags.fandom.com/wiki/Straight_flag">Link to source for meaning behind straight flag</a>
             <br/>
             <!--Socials-->
-            <a href="https://www.facebook.com/"><img src="images/facebook.png"><img src="images/facebook.png"></a>
+            <a href="https://www.facebook.com/"><img src="images/facebook.png"></a>
             <a href="https://www.instagram.com/lgbtq_rights_are_human_rights/"><img src="images/Instagram.png"></a>
             <!--Copyright-->
             <p>&copy; LGBTQ+ Human Rights</p>
