--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <br/>
             <a href="https://www.verywellmind.com/what-the-colors-of-the-new-pride-flag-mean-5189173">Link to Colors of the Pride flag meanings</a>
             <br/>
-            <a href="https://www.facebook.com/"><img src="images/facebook.png"><img src="images/facebook.png"></a>
+            <a href="https://www.facebook.com/"><img src="images/facebook.png"></a>
             <a href="https://www.instagram.com/lgbtq_rights_are_human_rights/"><img src="images/Instagram.png"></a>
             <!--Copyright-->
             <p>&copy; LGBTQ+ Human Rights</p>
