--- a/history.html
+++ b/history.html
@@ -13,31 +13,6 @@
             background-image: url(images/history.jfif);
             background-size: 100% auto;
         }
-        /*Indents paragraphs. Indent size is 3% of page size*/
-        p {
-            text-indent: 3%;
-        }
-        /*The image is in a figure tag which is in a section tag with an id of section1. 
-        Floats image to the right, gives it a width of 18%, and a margin of 15px all around*/
-        #section1 figure img {
-            float: right;
-            width: 18%;
-            margin: 15px;
-        }
-        /*The image is in a figure tag with an id of figure1 which is in a section tag with an id of section2.
-        Floats the image right, gives it a width of 10%, and a margin of 10px*/
-        #section2 #figure1 img {
-            float: right;
-            width: 10%;
-            margin: 10px;
-        }
-        /*The image is in a figure tag with an id of figure1 which is in a section tag with an id of section2.
-        Floats image right, gives it a width of 20% and a margin of 10px*/
-        #section2 #figure2 img {
-            float: right;
-            width: 20%;
-            margin: 10px;
-        }
     </style>
 </head>
 <body>
@@ -59,7 +34,6 @@
         <!--Section about historical figures in lgbtq+ history-->
         <section id="section1">
             <h2>Historical Figures</h2>
-            <article>
                 <table>
                     <tr>
                         <th>Biography</th>
@@ -69,42 +43,33 @@
                         <td>Chi Chia-Wei was the first person to come out publicly as gay on national television in 1986, while organizing a press conference to announce his sexuality and his launch of a campaign to prevent the spread of HIV/AIDS.  Chi helped make Taiwan the first nation in Asia to legalize same-sex marriage. In 1986, Chi applied for a marriage license and was denied. He reapplied 3 more times but in 2013, when he applied and was denied again, Chi appealed the decision to the Taipei city government’s Department of Civil Affairs. In October 2016, Queermosa presented Chi with its first Queer Pioneer Award. On May 24, 2017, Taiwan’s Constitutional Court ruled that same-sex couples could marry, beginning in May 2019.</td>
                         <td><img src="images/chiciawei.png" alt="Image of Chi Chia-Wei facing backwards on a balcony wearing a rainbow pride flag"></td>
                     </tr>
+                    <tr>
+                        <td>Audre Lorde began writing poetry in high school. After a poem was rejected for a class assignment, she submitted it to Seventeen magazine, and it became her first professional publication. While pursuing her education at the National University of Mexico, Lorde accepted her identity as a lesbian and a poet. When she returned to the U.S., she socialized at lesbian bars while taking classes at Hunter College. Lorde graduated from Hunter College in 1959 and attained a master's degree in library science from Columbia University in 1961. She had two children with her husband, a white gay man named Edward Rollins. Throughout the 1970s and 1980s, Lorde published regularly in magazines and anthologies. She also became active in civil rights, antiwar, and women’s movements. Lorde was diagnosed with breast cancer in 1977, followed by a diagnosis of liver cancer 6 years later. She died from cancer on November 17, 1992.</td>
+                        <td><img src="images/audrelorde.webp" alt="Image of Audre Lorde enthusiastically speaking with a microphone"></td>
+                    </tr>
                 </table>
-            </article>
-            <br/>
-            <article>
-                <!--Image of Audre Lorde-->
-                <figure>
-                    <img src="images/audrelorde.webp" alt="Image of Audre Lorde enthusiastically speaking with a microphone">
-                </figure>
-                <!--Short biography of Audre Lorde-->
-                <h3>Audre Lorde 1934 - 1992</h3>
-                <p>Audre Lorde began writing poetry in high school. After a poem was rejected for a class assignment, she submitted it to Seventeen magazine, and it became her first professional publication. While pursuing her education at the National University of Mexico, Lorde accepted her identity as a lesbian and a poet. When she returned to the U.S., she socialized at lesbian bars while taking classes at Hunter College. Lorde graduated from Hunter College in 1959 and attained a master's degree in library science from Columbia University in 1961. She had two children with her husband, a white gay man named Edward Rollins. Throughout the 1970s and 1980s, Lorde published regularly in magazines and anthologies. She also became active in civil rights, antiwar, and women’s movements. Lorde was diagnosed with breast cancer in 1977, followed by a diagnosis of liver cancer 6 years later. She died from cancer on November 17, 1992.</p>
-            </article>
         </section>
         <br/>
+        <hr>
         <!--Historic events in LGBTQ+ history-->
         <section>
-            <h2>Historic Events</h2>
-        </section>
-        <hr>
-        <section id="section2">
-            <!--Image of pink triangle-->
-            <figure id="figure1">
-                <img src="images/pinktri.jfif" alt="Upside down pink triangle against black background">
-            </figure>
-            <!--Information about the pink triangle-->
-            <h3>Pink Triangle – 1933</h3>
-            <p>In Nazi Germany, pink triangles were used as concentration camp badges to identify male prisoners who were sent there because of their homosexuality. In 1995, after a decade of campaigning, a pink triangle plaque was installed at the Dachau Memorial Museum to commemorate the suffering of gay men and lesbians. Originally intended as a badge of shame, the pink triangle (often inverted from its Nazi usage) has been reclaimed as an international symbol of gay pride and the gay rights movement.</p>
-            <br/>
-            <hr>
-            <!--Image of stonewall riot occurrance-->
-            <figure id="figure2">
-                <img src="images/stonewall.avif" alt="Black and white image of police pushing back against rioters">
-            </figure>
-            <!--info about Stonewall Riots-->
-            <h3>June 28, 1969 - Stonewall Riots</h3>
-            <p>In the early morning hours of Saturday, June 28, 1969, nine policemen enter the Stonewall Inn, a gay bar on Christopher Street in Greenwich Village, and take several patrons into custody in accordance with a New York law authorizing the arrest of anyone not wearing gender-appropriate clothing. The ensuing riot lasts for 5 days.</p>
+            <table>
+                <tr>
+                    <th>Historic Events</th>
+                    <th>Image</th>
+                </tr>
+                <tr>
+                    <td>Pink Triangle
+                        <br/>
+                        In Nazi Germany, pink triangles were used as concentration camp badges to identify male prisoners who were sent there because of their homosexuality. In 1995, after a decade of campaigning, a pink triangle plaque was installed at the Dachau Memorial Museum to commemorate the suffering of gay men and lesbians. Originally intended as a badge of shame, the pink triangle (often inverted from its Nazi usage) has been reclaimed as an international symbol of gay pride and the gay rights movement.</td>
+                    <td><img src="images/pinktri.jfif" alt="Upside down pink triangle against black background"></td>
+                </tr>
+                <tr>
+                    <td>Stonewall Riots
+                        <br/>
+                        In the early morning hours of Saturday, June 28, 1969, nine policemen enter the Stonewall Inn, a gay bar on Christopher Street in Greenwich Village, and take several patrons into custody in accordance with a New York law authorizing the arrest of anyone not wearing gender-appropriate clothing. The ensuing riot lasts for 5 days.</td>
+                </tr>
+            </table>
         </section>
     </main>
     <!--Links and copyright-->
