--- a/history.html
+++ b/history.html
@@ -55,7 +55,7 @@
         <section>
             <table>
                 <tr>
-                    <th>Historic Events</th>
+                    <th>Events</th>
                     <th>Image</th>
                 </tr>
                 <tr>
