--- a/support.html
+++ b/support.html
@@ -31,6 +31,13 @@
             background-color: #e5dbf7;
             border-radius: 8px;
         }
+        iframe {
+            transition: width, height, 5s;
+        }
+        iframe:hover {
+            width: 1600px;
+            height: 900px;
+        }
     </style>
 </head>
 <body>
