--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@
             <!--Table showing meanings of colors-->
             <table>
                 <tr>
+                    <th>Color</th>
+                    <th>What it represents</th>
+                </tr>
+                <tr>
                     <td>Yellow</td>
                     <td>Represents non-binary, unassigned or undefined gender.</td>
                 </tr>
