--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,9 @@
             color: white;
             margin: 10px;
         }
+        #submit {
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -69,7 +72,7 @@
                     <label for="questionsorfeedback">Questions or Feedback</label>
                     <br/>
                     <textarea id="questionsorfeedback" name="QuestionsorFeedback" rows="8" cols="50"></textarea>
-                    <input type="submit" value="Submit">
+                    <input id="submit" type="submit" value="Submit">
         </section>
         <br/>
         <section>
