--- a/flags.html
+++ b/flags.html
@@ -42,7 +42,7 @@
         <section>
             <!--Table containing image of flag, followed by name of flag, follwed by meaning of flag/flag colors, 
             followed by breaks to create space for images-->
-            <table>
+            <table id="ftable">
                 <tr>
                     <th>Flag Meaning</th>
                     <th>Flag</th>
