--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!--
+Name: Aishat Hassan
+Course: Web Development
+Teacher: Ms. Hoitink
+School: Pembina Trails Collegiate
+Date Last Modified: 6/12/25
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
