--- a/history.html
+++ b/history.html
@@ -32,9 +32,9 @@
     <!--Main content-->
     <main>
         <!--Section about historical figures in lgbtq+ history-->
-        <section id="section1">
+        <section class="section1">
             <h2>Historical Figures</h2>
-                <table>
+                <table class="infotable">
                     <tr>
                         <th>Biography</th>
                         <th>Person(s)</th>
