--- a/history.html
+++ b/history.html
@@ -68,6 +68,7 @@
                     <td>Stonewall Riots
                         <br/>
                         In the early morning hours of Saturday, June 28, 1969, nine policemen enter the Stonewall Inn, a gay bar on Christopher Street in Greenwich Village, and take several patrons into custody in accordance with a New York law authorizing the arrest of anyone not wearing gender-appropriate clothing. The ensuing riot lasts for 5 days.</td>
+                        <td><img src="images/stonewall.avif" alt="Image of police pushing back against rioters"></td>
                 </tr>
             </table>
         </section>
