--- a/support.html
+++ b/support.html
@@ -13,6 +13,9 @@
             background-image: url(images/support.jpg);
             background-size: 100% auto;
         }
+        main {
+            padding-top: 20px;
+        }
         /*Makes table width 100%, top margin 20px, and border spacing 10px*/
         table {
             width: 100%;
