--- a/contact.html
+++ b/contact.html
@@ -59,19 +59,19 @@
                     <label for="fname">First Name: </label>
                     <br/>
                     <!--Input box-->
-                    <input type="text" id="fname" name="fname">
+                    <input type="text" id="fname" name="fname" required>
                     <br/>
-                    <label for="lname">Last Name: </label>
+                    <label for="lname">Last Name (required): </label>
                     <br/>
-                    <input type="text" id="lname" name="lname">
+                    <input type="text" id="lname" name="lname" required>
                     <br/>
-                    <label for="email">Email: </label>
+                    <label for="email">Email: (required)</label>
                     <br/>
                     <input type="text" id="email" name="email">
                     <br/>
-                    <label for="questionsorfeedback">Questions or Feedback</label>
+                    <label for="questionsorfeedback">Questions or Feedback: (Required)</label>
                     <br/>
-                    <textarea id="questionsorfeedback" name="QuestionsorFeedback" rows="8" cols="50"></textarea>
+                    <textarea id="questionsorfeedback" name="QuestionsorFeedback" rows="8" cols="50" required></textarea>
                     <input id="submit" type="submit" value="Submit">
         </section>
         <br/>
