--- a/history.html
+++ b/history.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project</title>
+    <title>History</title>
     <!--Links page to external CSS-->
     <link rel="stylesheet" href="CSS/external.css">
     <!--CSS-->
