--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Date Last Modified: 6/12/25
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project</title>
+    <title>Home</title>
     <!--Connecting to external CSS-->
     <link rel="stylesheet" href="CSS/external.css">
     <!--CSS-->
