--- a/history.html
+++ b/history.html
@@ -34,7 +34,7 @@
         <!--Section about historical figures in lgbtq+ history-->
         <section class="section1">
             <h2>Historical Figures</h2>
-                <table class="infotable">
+                <table>
                     <tr>
                         <th>Biography</th>
                         <th>Person(s)</th>
@@ -68,7 +68,7 @@
                     <td>Stonewall Riots
                         <br/>
                         In the early morning hours of Saturday, June 28, 1969, nine policemen enter the Stonewall Inn, a gay bar on Christopher Street in Greenwich Village, and take several patrons into custody in accordance with a New York law authorizing the arrest of anyone not wearing gender-appropriate clothing. The ensuing riot lasts for 5 days.</td>
-                        <td><img src="images/stonewall.avif" alt="Image of police pushing back against rioters"></td>
+                    <td><img src="images/stonewall.avif" alt="Image of police pushing back against rioters"></td>
                 </tr>
             </table>
         </section>
