--- a/history.html
+++ b/history.html
@@ -32,7 +32,7 @@
     <!--Main content-->
     <main>
         <!--Section about historical figures in lgbtq+ history-->
-        <section class="section1">
+        <section>
             <h2>Historical Figures</h2>
                 <table>
                     <tr>
