--- a/history.html
+++ b/history.html
@@ -13,6 +13,9 @@
             background-image: url(images/history.jfif);
             background-size: 100% auto;
         }
+        table img {
+            width: 20%;
+        }
     </style>
 </head>
 <body>
