--- a/flags.html
+++ b/flags.html
@@ -14,10 +14,8 @@
             background-size: 100% auto;
         }
         /*Floats images right, makes width 15%, and gives all around margin of 5px*/
-        img {
-            float: right;
-            width: 15%;
-            margin: 5px;
+        table img {
+            width: 100%;
         }
     </style>
 </head>
