--- a/history.html
+++ b/history.html
@@ -16,6 +16,9 @@
         table img {
             width: 100%;
         }
+        th {
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
